--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jake's Portfolio</title>
+    <title>Jake Ryan - Web Developer</title>
     <link rel="stylesheet" href="css/app.css">
-    <!-- dosis -->
-    <link href="https://fonts.googleapis.com/css?family=Dosis:400,600" rel="stylesheet">
-    <!-- raleway -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans+Condensed:300" rel="stylesheet">
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="menu-toggle">
+        <div class="bar"></div>
+      </div>
+      <aside class="off-menu">
+        <ul>
+          <li>
+            <a href="#about">About Me.</a>
+          </li>
+          <li>
+            <a href="#samples">Samples.</a>
+          </li>
+        </ul>
+      </aside>
+    </header>
     <main class="main">
       <section class="hero">
         <div class="title">
-          <div class="row">
-            <div class="small-12 column">
-              <h1>Jake Ryan</h1>
-              <h2>web developer</h2>
-            </div>
-          </div>
+          <h1>Jake Ryan</h1>
+          <h2>Web Developer</h2>
         </div>
-      </section>
-      <section class="intro">
-
       </section>
     </main>
     <script src="bower_components/jquery/dist/jquery.js"></script>
