--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jake Ryan - Web Developer</title>
+    <link rel="stylesheet" href="css/app.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans+Condensed:300" rel="stylesheet">
+    <!-- favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jake Ryan - Web Developer</title>
-    <link rel="stylesheet" href="css/app.css">
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans+Condensed:300" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -37,10 +38,29 @@
           <h2>Web Developer</h2>
         </div>
       </section>
+      <section class="about">
+        <div class="row align-center" data-equalizer>
+          <div class="small-12 medium-10 large-8 column">
+            <div class="row">
+              <div class="small-12 medium-6 column" data-equalizer-watch>
+                <div class="snowflake"></div>
+              </div>
+              <div class="small-12 medium-6 column" data-equalizer-watch>
+                <h2>About Me.</h2>
+                <p>My name is Jake and I'm a web developer, skier, mountain-biker, adventure-taker, outdoorsman. That just about sums it up. I have a propensity for clean, well-working code as well as elegant, user friendly design. A finished product that marries these ideals is what I strive for.</p>
+                <p>I live in Utah but call Vermont my true home. In the summer, I look forward to the winter. In the winter (after a few heavy storms and a satisfactory number of powder days) I can't help but look forward to the summer. So it goes.</p>
+                <p>Currently I am happily employed at <a href="http://getfluid.com" target="_blank">Fluid Advertising</a> in Bountiful, UT but am always open to taking on freelance projects.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/dist/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
+    <script src="bower_components/headroom.js/dist/headroom.min.js"></script>
+    <script src="bower_components/headroom.js/dist/jQuery.headroom.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
