fade bg after scroll

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <aside class="off-menu">
         <ul>
           <li>
-            <a href="#about">About Me.</a>
+            <a href="#about" class="ss">About Me.</a>
           </li>
           <li>
-            <a href="#samples">Samples.</a>
+            <a href="#samples" class="ss">Samples.</a>
           </li>
         </ul>
       </aside>
@@ -38,6 +38,7 @@
           <h2>Web Developer</h2>
         </div>
       </section>
+      <a name="about"></a>
       <section class="about">
         <div class="row align-center" data-equalizer>
           <div class="small-12 medium-10 large-8 column">
@@ -61,6 +62,8 @@
     <script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
     <script src="bower_components/headroom.js/dist/headroom.min.js"></script>
     <script src="bower_components/headroom.js/dist/jQuery.headroom.min.js"></script>
+    <script src="bower_components/waypoints/lib/noframework.waypoints.min.js"></script>
+    <script src="bower_components/waypoints/lib/jquery.waypoints.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
