--- a/index.html
+++ b/index.html
@@ -34,24 +34,23 @@
     <main class="main">
       <section class="hero">
         <div class="title">
-          <h1>Jake Ryan</h1>
+          <h1>
+            <span><b class="j">J</b><i>ake</i></span>
+            <span><b class="r">R</b><i>yan</i></span>
+          </h1>
           <h2>Web Developer</h2>
         </div>
       </section>
-      <a name="about"></a>
       <section class="about">
         <div class="row align-center" data-equalizer>
-          <div class="small-12 medium-10 large-8 column">
-            <div class="row">
-              <div class="small-12 medium-6 column" data-equalizer-watch>
-                <div class="snowflake"></div>
-              </div>
-              <div class="small-12 medium-6 column" data-equalizer-watch>
-                <h2>About Me.</h2>
-                <p>My name is Jake and I'm a web developer, skier, mountain-biker, adventure-taker, outdoorsman. That just about sums it up. I have a propensity for clean, well-working code as well as elegant, user friendly design. A finished product that marries these ideals is what I strive for.</p>
-                <p>I live in Utah but call Vermont my true home. In the summer, I look forward to the winter. In the winter (after a few heavy storms and a satisfactory number of powder days) I can't help but look forward to the summer. So it goes.</p>
-                <p>Currently I am happily employed at <a href="http://getfluid.com" target="_blank">Fluid Advertising</a> in Bountiful, UT but am always open to taking on freelance projects.</p>
-              </div>
+          <div class="small-11 medium-8 large-6 text-left column">
+            <a name="about"></a>
+            <img src="/assets/flake-w.svg" class="snowflake">
+            <div class="bio-wrap">
+              <h2>About Me.</h2>
+              <p>My name is Jake and I'm a web developer, skier, mountain-biker, adventure-taker, outdoorsman. That just about sums it up. I have a propensity for clean, well-working code as well as elegant, user friendly design. A finished product that marries these ideals is what I strive for.</p>
+              <p>I live in Utah but call Vermont my true home. In the summer, I look forward to the winter. In the winter (after a few heavy storms and a satisfactory number of powder days) I can't help but look forward to the summer. So it goes.</p>
+              <p>Currently I am happily employed at <a href="http://getfluid.com" target="_blank">Fluid Advertising</a> in Bountiful, UT but am always open to taking on freelance projects.</p>
             </div>
           </div>
         </div>
