--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <aside class="off-menu">
         <ul>
           <li>
+            <a href="#top">Top.</a>
+          </li>
+          <li>
             <a href="#about" class="ss">About Me.</a>
           </li>
           <li>
@@ -32,6 +35,8 @@
       </aside>
     </header>
     <main class="main">
+      <!-- hero -->
+      <a name="top"></a>
       <section class="hero">
         <div class="title">
           <h1>
@@ -41,19 +46,20 @@
           <h2>Web Developer</h2>
         </div>
       </section>
+      <!-- about -->
+      <a name="about"></a>
       <section class="about">
-        <div class="row align-center" data-equalizer>
-          <div class="small-11 medium-8 large-6 text-left column">
-            <a name="about"></a>
-            <img src="/assets/flake-w.svg" class="snowflake">
-            <div class="bio-wrap">
-              <h2>About Me.</h2>
-              <p>My name is Jake and I'm a web developer, skier, mountain-biker, adventure-taker, outdoorsman. That just about sums it up. I have a propensity for clean, well-working code as well as elegant, user friendly design. A finished product that marries these ideals is what I strive for.</p>
-              <p>I live in Utah but call Vermont my true home. In the summer, I look forward to the winter. In the winter (after a few heavy storms and a satisfactory number of powder days) I can't help but look forward to the summer. So it goes.</p>
-              <p>Currently I am happily employed at <a href="http://getfluid.com" target="_blank">Fluid Advertising</a> in Bountiful, UT but am always open to taking on freelance projects.</p>
-            </div>
+        <div class="bars-wrap">
+          <div class="top-wrap">
+            <p>My name is Jake and I'm a web developer, skier, mountain-biker, adventure-taker, outdoorsman. That just about sums it up. I have a propensity for clean, well-working code as well as elegant, user friendly design. A finished product that marries these ideals is what I strive for.</p>
+            <p>I live in Utah but call Vermont my true home. In the summer, I look forward to the winter. In the winter (after a few heavy storms and a satisfactory number of powder days) I can't help but look forward to the summer. So it goes.</p>
+            <p>Currently I am happily employed at <a href="http://getfluid.com" target="_blank">Fluid Advertising</a> in Bountiful, UT but am always open to taking on freelance projects.</p>
+          </div>
+          <div class="btm-wrap">
+            <h2>About Me.</h2>
           </div>
         </div>
+        <!-- <img src="/assets/flake-w.svg" class="snowflake"> -->
       </section>
     </main>
     <script src="bower_components/jquery/dist/jquery.js"></script>
