--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <a href="#about" class="ss">About Me.</a>
           </li>
           <li>
+            <a href="#skillset" class="ss">Skill Set.</a>
+          </li>
+          <li>
             <a href="#samples" class="ss">Samples.</a>
           </li>
         </ul>
@@ -59,7 +62,12 @@
             <h2>About Me.</h2>
           </div>
         </div>
-        <!-- <img src="/assets/flake-w.svg" class="snowflake"> -->
+      </section>
+      <a name="skillset"></a>
+      <section class="skillset">
+        <div class="skill-web">
+          <img src="/assets/flake-w.svg" class="snowflake">
+        </div>
       </section>
     </main>
     <script src="bower_components/jquery/dist/jquery.js"></script>
