--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
+    <!-- pull in web svg -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script>
+     $(function(){
+       $(".skillset .skill-web").load("assets/abstract.html");
+     });
+     </script>
   </head>
   <body>
     <header>
@@ -66,11 +73,10 @@
       <a name="skillset"></a>
       <section class="skillset">
         <div class="skill-web">
-          <?php include('assets/abstract.svg'); ?>
+
         </div>
       </section>
     </main>
-    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/dist/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
     <script src="bower_components/headroom.js/dist/headroom.min.js"></script>
