skill web responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script>
      $(function(){
-       $(".skillset .skill-web").load("assets/abstract.html");
+       $(".skillset .skill-web .web-container").load("assets/abstract.svg");
      });
      </script>
   </head>
@@ -73,7 +73,36 @@
       <a name="skillset"></a>
       <section class="skillset">
         <div class="skill-web">
+          <div class="web-container">
 
+          </div>
+          <div class="icons-container">
+            <div class="html">
+              <img src="assets/html-round-inv.svg" alt="html">
+            </div>
+            <div class="wordpress">
+              <img src="assets/wp-round.svg" alt="wordpress">
+            </div>
+            <div class="scss">
+              <img src="assets/scss-round-inv.svg" alt="scss">
+            </div>
+            <div class="php">
+              <img src="assets/php-round-inv.svg" alt="php">
+            </div>
+            <div class="javascript">
+              <img src="assets/js-round-inv.svg" alt="javascript">
+            </div>
+            <div class="jquery">
+              <img src="assets/jquery-round-inv.svg" alt="jquery">
+            </div>
+            <div class="illustrator">
+              <img src="assets/illustrator-round-inv.svg" alt="illustrator">
+            </div>
+            <div class="photoshop">
+              <img src="assets/photoshop-round-inv.svg" alt="photoshop">
+            </div>
+            <!-- my sql -->
+          </div>
         </div>
       </section>
     </main>
