--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <aside class="off-menu">
         <ul>
           <li>
-            <a href="#top">Top.</a>
+            <a href="#top" class="ss">Top.</a>
           </li>
           <li>
             <a href="#about" class="ss">About Me.</a>
