--- a/index.html
+++ b/index.html
@@ -105,6 +105,54 @@
           </div>
         </div>
       </section>
+      <a name="samples"></a>
+      <section class="samples">
+        <div class="samples-wrap">
+          <h2 class="text-center">Samples.</h2>
+          <div class="row small-up-1 medium-up-2" data-equalizer>
+            <div class="column">
+              <div class="sample text-center" data-equalizer-watch>
+                <h3>cole west</h3>
+              </div>
+            </div>
+            <div class="column">
+              <div class="sample text-center" data-equalizer-watch>
+                <h3>blacksmith</h3>
+              </div>
+            </div>
+            <div class="column">
+              <div class="sample text-center" data-equalizer-watch>
+                <h3>maschoff</h3>
+              </div>
+            </div>
+            <div class="column">
+              <div class="sample text-center" data-equalizer-watch>
+                <h3>Redd?</h3>
+              </div>
+            </div>
+            <div class="column">
+              <div class="sample text-center" data-equalizer-watch>
+                <h3>Zamp</h3>
+              </div>
+            </div>
+            <div class="column">
+              <div class="sample text-center" data-equalizer-watch>
+                <h3>MCBB</h3>
+              </div>
+            </div>
+            <div class="column">
+              <div class="sample text-center" data-equalizer-watch>
+                <h3>Space Demo</h3>
+              </div>
+            </div>
+            <div class="column">
+              <div class="sample text-center" data-equalizer-watch>
+                <h3>360 electrical</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="bower_components/what-input/dist/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
