--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           </div>
         </div>
       </section>
+      <!-- skillset -->
       <a name="skillset"></a>
       <section class="skillset">
         <div class="skill-web">
@@ -105,42 +106,67 @@
           </div>
         </div>
       </section>
+      <!-- samples -->
       <a name="samples"></a>
       <section class="samples">
         <div class="samples-wrap">
           <h2 class="text-center">Samples.</h2>
           <div class="row small-up-1 medium-up-2" data-equalizer>
-            <div class="column">
-              <div class="sample text-center" data-equalizer-watch>
-                <h3>cole west</h3>
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center cw">
+                <a class="open-inner">+</a>
+                <div class="inner">
+                  <h3>Cole West</h3>
+                </div>
               </div>
             </div>
-            <div class="column">
-              <div class="sample text-center" data-equalizer-watch>
-                <h3>blacksmith</h3>
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center bsmith">
+                <a class="open-inner">+</a>
+                <div class="inner">
+                  <h3>Blacksmith Intl.</h3>
+                </div>
               </div>
             </div>
-            <div class="column">
-              <div class="sample text-center" data-equalizer-watch>
-                <h3>maschoff</h3>
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center maschoff">
+                <a class="open-inner">+</a>
+                <div class="inner">
+                  <h3>Maschoff Brennan</h3>
+                </div>
               </div>
             </div>
-            <div class="column">
-              <div class="sample text-center" data-equalizer-watch>
-                <h3>Redd?</h3>
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center redd">
+                <a class="open-inner">+</a>
+                <div class="inner">
+                  <h3>Redd Engineering</h3>
+                </div>
               </div>
             </div>
-            <div class="column">
-              <div class="sample text-center" data-equalizer-watch>
-                <h3>Zamp</h3>
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center zamp">
+                <a class="open-inner">+</a>
+                <div class="inner">
+                  <h3>Zamp HR</h3>
+                </div>
               </div>
             </div>
-            <div class="column">
-              <div class="sample text-center" data-equalizer-watch>
-                <h3>MCBB</h3>
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center mc2b">
+                <a class="open-inner">+</a>
+                <div class="inner">
+                  <h3>MC2B</h3>
+                </div>
               </div>
             </div>
-            <div class="column">
+            <!-- <div class="column">
               <div class="sample text-center" data-equalizer-watch>
                 <h3>Space Demo</h3>
               </div>
@@ -149,7 +175,7 @@
               <div class="sample text-center" data-equalizer-watch>
                 <h3>360 electrical</h3>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
