titles for skills

--- a/index.html
+++ b/index.html
@@ -80,27 +80,35 @@
           <div class="icons-container">
             <div class="html">
               <img src="assets/html-round-inv.svg" alt="html">
+              <h4 class="title">HTML5</h4>
             </div>
             <div class="wordpress">
               <img src="assets/wp-round.svg" alt="wordpress">
+              <h4 class="title">Wordpress</h4>
             </div>
             <div class="scss">
               <img src="assets/scss-round-inv.svg" alt="scss">
+              <h4 class="title">SCSS/SASS</h4>
             </div>
             <div class="php">
               <img src="assets/php-round-inv.svg" alt="php">
+              <h4 class="title">PHP</h4>
             </div>
             <div class="javascript">
               <img src="assets/js-round-inv.svg" alt="javascript">
+              <h4 class="title">JavaScript</h4>
             </div>
             <div class="jquery">
               <img src="assets/jquery-round-inv.svg" alt="jquery">
+              <h4 class="title">jQuery</h4>
             </div>
             <div class="illustrator">
               <img src="assets/illustrator-round-inv.svg" alt="illustrator">
+              <h4 class="title">Adobe Illustrator</h4>
             </div>
             <div class="photoshop">
               <img src="assets/photoshop-round-inv.svg" alt="photoshop">
+              <h4 class="title">Adobe Photoshop</h4>
             </div>
             <!-- my sql -->
           </div>
