--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <section class="about">
         <div class="bars-wrap">
           <div class="top-wrap">
-            <p>My name is Jake and I'm a web developer, skier, mountain-biker, adventure-taker, outdoorsman. That just about sums it up. I have a propensity for clean, well-working code as well as elegant, user friendly design. A finished product that marries these ideals is what I strive for.</p>
+            <p>My name is Jake and I'm a web developer, skier, mountain-biker, adventure-taker, outdoorsman. I have a propensity for clean, well-working code as well as elegant, user friendly design. A finished product that marries these ideals is what I strive for.</p>
             <p>I live in Utah but call Vermont my true home. In the summer, I look forward to the winter. In the winter (after a few heavy storms and a satisfactory number of powder days) I can't help but look forward to the summer. So it goes.</p>
             <p>Currently I am happily employed at <a href="http://getfluid.com" target="_blank">Fluid Advertising</a> in Bountiful, UT but am always open to taking on freelance projects.</p>
           </div>
@@ -123,54 +123,66 @@
             <!-- Sample -->
             <div class="column" data-equalizer-watch>
               <div class="sample text-center cw">
-                <a class="open-inner">+</a>
+                <a class="open-inner"></a>
                 <div class="inner">
                   <h3>Cole West</h3>
+                  <hr>
+                  <a href="http://colewest.com" target="_blank" class="button">Visit Site</a>
                 </div>
               </div>
             </div>
             <!-- Sample -->
             <div class="column" data-equalizer-watch>
               <div class="sample text-center bsmith">
-                <a class="open-inner">+</a>
+                <a class="open-inner"></a>
                 <div class="inner">
                   <h3>Blacksmith Intl.</h3>
+                  <hr>
+                  <a href="http://blacksmithint.com" target="_blank" class="button">Visit Site</a>
                 </div>
               </div>
             </div>
             <!-- Sample -->
             <div class="column" data-equalizer-watch>
               <div class="sample text-center maschoff">
-                <a class="open-inner">+</a>
+                <a class="open-inner"></a>
                 <div class="inner">
                   <h3>Maschoff Brennan</h3>
+                  <hr>
+                  <a href="http://mabr.com" target="_blank" class="button">Visit Site</a>
                 </div>
               </div>
             </div>
             <!-- Sample -->
             <div class="column" data-equalizer-watch>
               <div class="sample text-center redd">
-                <a class="open-inner">+</a>
+                <a class="open-inner"></a>
                 <div class="inner">
                   <h3>Redd Engineering</h3>
+                  <hr>
+                  <a href="http://reddengineering.com" target="_blank" class="button">Visit Site</a>
                 </div>
               </div>
             </div>
             <!-- Sample -->
             <div class="column" data-equalizer-watch>
               <div class="sample text-center zamp">
-                <a class="open-inner">+</a>
+                <a class="open-inner"></a>
                 <div class="inner">
                   <h3>Zamp HR</h3>
+                  <hr>
+                  <a href="http://zamphr.com" target="_blank" class="button">Visit Site</a>
                 </div>
               </div>
             </div>
             <!-- Sample -->
             <div class="column" data-equalizer-watch>
               <div class="sample text-center mc2b">
-                <a class="open-inner">+</a>
+                <a class="open-inner"></a>
                 <div class="inner">
                   <h3>MC2B</h3>
+                  <hr>
+                  <a href="http://www.mc2b.com" target="_blank" class="button">Visit Site</a>
                 </div>
               </div>
             </div>
