--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <aside class="off-menu">
         <ul>
           <li>
-            <a href="#top" class="ss">Top.</a>
+            <a href="#top" class="ss">Home.</a>
           </li>
           <li>
             <a href="#about" class="ss">About Me.</a>
@@ -40,6 +40,9 @@
           </li>
           <li>
             <a href="#samples" class="ss">Samples.</a>
+          </li>
+          <li>
+            <a href="#resume" class="ss">Resume.</a>
           </li>
         </ul>
       </aside>
@@ -61,7 +64,7 @@
       <section class="about">
         <div class="bars-wrap">
           <div class="top-wrap">
-            <p>My name is Jake and I'm a web developer, skier, mountain-biker, adventure-taker, outdoorsman. I have a propensity for clean, well-working code as well as elegant, user friendly design. A finished product that marries these ideals is what I strive for.</p>
+            <p>My name is Jake and I'm a web developer, skier, mountain-biker, adventure-taker and outdoors man. I have a propensity for clean, well-working code as well as elegant, user-friendly design. I strive for a finished product that marries these ideals.</p>
             <p>I live in Utah but call Vermont my true home. In the summer, I look forward to the winter. In the winter (after a few heavy storms and a satisfactory number of powder days) I can't help but look forward to the summer. So it goes.</p>
             <p>Currently I am happily employed at <a href="http://getfluid.com" target="_blank">Fluid Advertising</a> in Bountiful, UT but am always open to taking on freelance projects.</p>
           </div>
