--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <div class="small-12 medium-11 large-10 column text-center">
                 <div class="snapshot">
                   <img src="assets/resume.jpg" alt="Preview of my resume">
-                  <a href="assets/JakeRyanResume.pdf" class="resume-link" alt="View full resume" target="_blank">+</a>
+                  <a href="assets/JakeRyanResume.pdf" class="resume-link" alt="View full resume" target="_blank">Full Resume</a>
                 </div>
               </div>
             </div>
