--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jake Ryan - Web Developer</title>
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="dist/app.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,500|Raleway" rel="stylesheet">
     <!-- favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -220,6 +220,6 @@
     <script src="bower_components/headroom.js/dist/jQuery.headroom.min.js"></script>
     <script src="bower_components/waypoints/lib/noframework.waypoints.min.js"></script>
     <script src="bower_components/waypoints/lib/jquery.waypoints.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="dist/app.js"></script>
   </body>
 </html>
