--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jake Ryan - Web Developer</title>
-    <link rel="stylesheet" href="dist/app.css">
+    <link rel="stylesheet" href="css/app.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,500|Raleway" rel="stylesheet">
     <!-- favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -213,6 +213,23 @@
           </div>
         </div>
       </section>
+      <!-- outro -->
+      <section class="outro">
+        <div class="mountain left">
+          <img src="assets/range-l.svg" alt="">
+        </div>
+        <div class="mountain right">
+          <img src="assets/range-r.svg" alt="">
+        </div>
+      </section>
+      <!-- footer -->
+      <footer>
+        <div class="row">
+          <div class="small-12 column">
+            <h2>Jake Ryan</h2>
+          </div>
+        </div>
+      </footer>
     </main>
     <script src="bower_components/what-input/dist/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
@@ -220,6 +237,6 @@
     <script src="bower_components/headroom.js/dist/jQuery.headroom.min.js"></script>
     <script src="bower_components/waypoints/lib/noframework.waypoints.min.js"></script>
     <script src="bower_components/waypoints/lib/jquery.waypoints.min.js"></script>
-    <script src="dist/app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
