--- a/index.html
+++ b/index.html
@@ -214,22 +214,22 @@
         </div>
       </section>
       <!-- outro -->
-      <section class="outro">
+<!--       <section class="outro">
         <div class="mountain left">
           <img src="assets/range-l.svg" alt="">
         </div>
         <div class="mountain right">
           <img src="assets/range-r.svg" alt="">
         </div>
-      </section>
+      </section> -->
       <!-- footer -->
-      <footer>
+     <!--  <footer>
         <div class="row">
           <div class="small-12 column">
             <h2>Jake Ryan</h2>
           </div>
         </div>
-      </footer>
+      </footer> -->
     </main>
     <script src="bower_components/what-input/dist/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
