--- a/index.html
+++ b/index.html
@@ -120,76 +120,72 @@
       <!-- samples -->
       <section class="samples">
         <a name="samples"></a>
-        <div class="row align-center">
-          <div class="small-12 medium-11 large-10 column">
-            <div class="samples-wrap">
-              <h2>Samples.</h2>
-              <div class="row small-up-1 medium-up-2" data-equalizer>
-                <!-- Sample -->
-                <div class="column" data-equalizer-watch>
-                  <div class="sample text-center cw">
-                    <a class="open-inner"></a>
-                    <div class="inner">
-                      <h3>Cole West</h3>
-                      <hr>
-                      <a href="http://colewest.com" target="_blank" class="button">Visit Site</a>
-                    </div>
-                  </div>
+        <div class="samples-wrap">
+          <!-- <h2>Samples.</h2> -->
+          <div class="row expanded small-up-1 medium-up-2" data-equalizer>
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center cw">
+                <a class="open-inner"></a>
+                <div class="inner">
+                  <h3>Cole West</h3>
+                  <hr>
+                  <a href="http://colewest.com" target="_blank" class="button">Visit Site</a>
                 </div>
-                <!-- Sample -->
-                <div class="column" data-equalizer-watch>
-                  <div class="sample text-center bsmith">
-                    <a class="open-inner"></a>
-                    <div class="inner">
-                      <h3>Blacksmith Intl.</h3>
-                      <hr>
-                      <a href="http://blacksmithint.com" target="_blank" class="button">Visit Site</a>
-                    </div>
-                  </div>
+              </div>
+            </div>
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center bsmith">
+                <a class="open-inner"></a>
+                <div class="inner">
+                  <h3>Blacksmith Intl.</h3>
+                  <hr>
+                  <a href="http://blacksmithint.com" target="_blank" class="button">Visit Site</a>
                 </div>
-                <!-- Sample -->
-                <div class="column" data-equalizer-watch>
-                  <div class="sample text-center maschoff">
-                    <a class="open-inner"></a>
-                    <div class="inner">
-                      <h3>Maschoff Brennan</h3>
-                      <hr>
-                      <a href="http://mabr.com" target="_blank" class="button">Visit Site</a>
-                    </div>
-                  </div>
+              </div>
+            </div>
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center maschoff">
+                <a class="open-inner"></a>
+                <div class="inner">
+                  <h3>Maschoff Brennan</h3>
+                  <hr>
+                  <a href="http://mabr.com" target="_blank" class="button">Visit Site</a>
                 </div>
-                <!-- Sample -->
-                <div class="column" data-equalizer-watch>
-                  <div class="sample text-center redd">
-                    <a class="open-inner"></a>
-                    <div class="inner">
-                      <h3>Redd Engineering</h3>
-                      <hr>
-                      <a href="http://reddengineering.com" target="_blank" class="button">Visit Site</a>
-                    </div>
-                  </div>
+              </div>
+            </div>
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center redd">
+                <a class="open-inner"></a>
+                <div class="inner">
+                  <h3>Redd Engineering</h3>
+                  <hr>
+                  <a href="http://reddengineering.com" target="_blank" class="button">Visit Site</a>
                 </div>
-                <!-- Sample -->
-                <div class="column" data-equalizer-watch>
-                  <div class="sample text-center zamp">
-                    <a class="open-inner"></a>
-                    <div class="inner">
-                      <h3>Zamp HR</h3>
-                      <hr>
-                      <a href="http://zamphr.com" target="_blank" class="button">Visit Site</a>
-                    </div>
-                  </div>
+              </div>
+            </div>
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center zamp">
+                <a class="open-inner"></a>
+                <div class="inner">
+                  <h3>Zamp HR</h3>
+                  <hr>
+                  <a href="http://zamphr.com" target="_blank" class="button">Visit Site</a>
                 </div>
-                <!-- Sample -->
-                <div class="column" data-equalizer-watch>
-                  <div class="sample text-center mc2b">
-                    <a class="open-inner"></a>
-                    <div class="inner">
-                      <h3>MC2B</h3>
-                      <hr>
-                      <a href="http://www.mc2b.com" target="_blank" class="button">Visit Site</a>
-                    </div>
-                  </div>
+              </div>
+            </div>
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center mc2b">
+                <a class="open-inner"></a>
+                <div class="inner">
+                  <h3>MC2B</h3>
+                  <hr>
+                  <a href="http://www.mc2b.com" target="_blank" class="button">Visit Site</a>
                 </div>
               </div>
             </div>
