update with new projects

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
       <section class="about">
         <div class="bars-wrap">
           <div class="top-wrap">
-            <p>My name is Jake and I'm a web developer, skier, mountain-biker, adventure-taker and outdoors man. I have a propensity for clean, well-working code as well as elegant, user-friendly design. I strive for a finished product that marries these ideals.</p>
-            <p>I live in Utah but call Vermont my true home. In the summer, I look forward to the winter. In the winter (after a few heavy storms and a satisfactory number of powder days) I can't help but look forward to the summer. So it goes.</p>
-            <p>Currently I am happily employed at <a href="http://getfluid.com" target="_blank">Fluid Advertising</a> in Bountiful, UT but am always open to taking on freelance projects.</p>
+            <p>My name is Jake and I'm a web developer, skier, mountain-biker, adventure-taker and outdoors-man. I have a propensity for clean, well-working code as well as elegant, user-friendly design. I strive for a finished product that marries these ideals.</p>
+            <p>I'm fortunate to call the beautiful state of Vermont my home. In the summer, I look forward to the winter. In the winter (after a few heavy storms and a satisfactory number of powder days) I can't help but look forward to the summer. So it goes.</p>
+            <p>I am always open to taking on freelance projects, so feel free to <a href="mailto:jryan6492@gmail.com">reach out!</a></p>
           </div>
           <div class="btm-wrap">
             <h2>About Me.</h2>
@@ -123,69 +123,72 @@
         <div class="samples-wrap">
           <!-- <h2>Samples.</h2> -->
           <div class="row expanded small-up-1 medium-up-2" data-equalizer>
+            <!-- row 1 -->
             <!-- Sample -->
             <div class="column" data-equalizer-watch>
-              <div class="sample text-center cw">
+              <div class="sample text-center vt">
                 <a class="open-inner"></a>
                 <div class="inner">
-                  <h3>Cole West</h3>
+                  <h3>Dr. Praeger's Veggie Tracker</h3>
                   <hr>
-                  <a href="http://colewest.com" target="_blank" class="button">Visit Site</a>
+                  <a href="https://veggietracker.com" target="_blank" class="button">Visit Site</a>
                 </div>
               </div>
             </div>
             <!-- Sample -->
             <div class="column" data-equalizer-watch>
-              <div class="sample text-center bsmith">
+              <div class="sample text-center bm">
                 <a class="open-inner"></a>
                 <div class="inner">
-                  <h3>Blacksmith Intl.</h3>
+                  <h3>Basics Market</h3>
                   <hr>
-                  <a href="http://blacksmithint.com" target="_blank" class="button">Visit Site</a>
+                  <a href="https://basicsmarket.com" target="_blank" class="button">Visit Site</a>
+                </div>
+              </div>
+            </div>
+            <!-- row 2 -->
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center js">
+                <a class="open-inner"></a>
+                <div class="inner">
+                  <h3>Joulesmart</h3>
+                  <hr>
+                  <a href="https://www.joulesmart.com" target="_blank" class="button">Visit Site</a>
                 </div>
               </div>
             </div>
             <!-- Sample -->
             <div class="column" data-equalizer-watch>
-              <div class="sample text-center maschoff">
+              <div class="sample text-center ciq">
                 <a class="open-inner"></a>
                 <div class="inner">
-                  <h3>Maschoff Brennan</h3>
+                  <h3>CultureIQ</h3>
                   <hr>
-                  <a href="http://mabr.com" target="_blank" class="button">Visit Site</a>
+                  <a href="https://cultureiq.com" target="_blank" class="button">Visit Site</a>
+                </div>
+              </div>
+            </div>
+            <!-- row 3 -->
+            <!-- Sample -->
+            <div class="column" data-equalizer-watch>
+              <div class="sample text-center skyward">
+                <a class="open-inner"></a>
+                <div class="inner">
+                  <h3>Skyward</h3>
+                  <hr>
+                  <a href="https://skyward.io" target="_blank" class="button">Visit Site</a>
                 </div>
               </div>
             </div>
             <!-- Sample -->
             <div class="column" data-equalizer-watch>
-              <div class="sample text-center redd">
+              <div class="sample text-center bpa">
                 <a class="open-inner"></a>
                 <div class="inner">
-                  <h3>Redd Engineering</h3>
+                  <h3>Trade Ally Network NW</h3>
                   <hr>
-                  <a href="http://reddengineering.com" target="_blank" class="button">Visit Site</a>
-                </div>
-              </div>
-            </div>
-            <!-- Sample -->
-            <div class="column" data-equalizer-watch>
-              <div class="sample text-center zamp">
-                <a class="open-inner"></a>
-                <div class="inner">
-                  <h3>Zamp HR</h3>
-                  <hr>
-                  <a href="http://zamphr.com" target="_blank" class="button">Visit Site</a>
-                </div>
-              </div>
-            </div>
-            <!-- Sample -->
-            <div class="column" data-equalizer-watch>
-              <div class="sample text-center mc2b">
-                <a class="open-inner"></a>
-                <div class="inner">
-                  <h3>MC2B</h3>
-                  <hr>
-                  <a href="http://www.mc2b.com" target="_blank" class="button">Visit Site</a>
+                  <a href="https://tradeallynetworknw.com" target="_blank" class="button">Visit Site</a>
                 </div>
               </div>
             </div>
