--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
             <div class="row align-center">
               <div class="small-12 medium-11 large-10 column text-center">
                 <div class="snapshot">
-                  <img src="assets/resume.jpg" alt="Preview of my resume">
-                  <a href="assets/JakeRyanResume.pdf" class="resume-link" alt="View full resume" target="_blank">Full Resume</a>
+                  <img src="assets/resume-screenshot-2019.png" alt="Preview of my resume">
+                  <a href="assets/JakeRyanResume2019.pdf" class="resume-link" alt="View full resume" target="_blank">Full Resume</a>
                 </div>
               </div>
             </div>
