add linkedin logo

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
           <li>
             <a href="#resume" class="ss">Resume.</a>
           </li>
+          <li class="social">
+            <a href="https://www.linkedin.com/in/jakepotterryan/" target="_blank"><img src="/assets/linkedin-icon-blue.png" alt="visit my linkedin profile"></a>
+          </li>
         </ul>
       </aside>
     </header>
